# theqvd

./: .gitignore  Changelog  README  README.md  README.rd  dummy.test  index.html  params.json  run_client.pl  run_client.sh  sync_client.pl  test.txt
automated-tests/: do-test.pl  hwlib.py  hwlib_common.py  hwlib_debian.py  hwlib_suse.py  install-qvd.txt  x11-gui-test.pl
contrib/QVD-CommandInterpreter/: Build.PL  Changes  MANIFEST  META.json  README  ignore.txt
contrib/QVD-L7R-Authenticator-Plugin-Notifybymail/: Build.PL  Changes  MANIFEST  MANIFEST.SKIP  META.yml  Makefile  Makefile.PL  README  ignore.txt
contrib/QVD-L7R-Authenticator-Plugin-Opensso/: Build.PL  Changes  MANIFEST  MANIFEST.SKIP.bak  MANIFEST.bak  META.yml  Makefile.PL  README  ignore.txt
contrib/QVD-L7R-Authenticator-Plugin-Passthrough/: Changes  MANIFEST  MANIFEST.SKIP  Makefile.PL  README  ignore.txt
contrib/QVD-UntarDIs/: Build.PL  Changes  MANIFEST  README  ignore.txt
contrib/QVD-VmaHook-Passthrough/: Changes  MANIFEST  MANIFEST.bak  Makefile.PL  README
contrib/qvd-serial-wrapper/: Makefile  qvd-serial-wrapper.c  tester.c
contrib/qvd-untar-os-image/: qvd-untar-os-image.pl
cups/linux/: print_0_driver.drv  printer.pl  tea4cups.pl
debian/qvd-client-0.01/: Makefile  qvd-client.desktop
debian/qvd-l7r-0.01/: Makefile
debian/qvd-node/: Makefile
debian/qvd-sample-config-0.01/: Makefile
debian/qvd-vma-0.01/: Makefile
debian/qvd-wat/: Makefile
doc/: HOWTO_PUBLISH  README  hooks.txt  noded.pod
doc/Roadmap/: Roadmap.vdx
ext/: .perlrc  Client.sh  check-dependencies.pl  config.ini  log4perl.conf  sample-init-lxc.sh  sample-init.sh  start  startall  startall_old  verify
flash/: nspluginwrapper_1.2.2-0ubuntu6.dsc  nspluginwrapper_1.2.2-0ubuntu6qvd1.dsc  nspluginwrapper_1.2.2-0ubuntu6qvd1_amd64.deb
libqvdclient/: Makefile  README
nx/: archives  nxagent.1  nxagent.patch  nxcomp-3.5.0-android.patch  nxcomp-3.5.0-libpng.patch  nxcomp-loopback.patch  nxcomp-slave-channel.patch  nxcomp.patch
serial/cyclades-serial-0.93/: .cvsignore  BUGS  Makefile.in  aix-dev.c  configure.in  cyclades-devices  cyclades-ser-cli.c  cyclades-serial-client  cyclades-serial-client.spec.in  depends  hpux-dev.c  indent-all  linux-dev.c  measure.c  misc.c  sco-dev.c  sock.c  solaris-dev.c  system.c  tbr.c  tbr1.c  telnet.c  tsrio.c  unixware-dev.c
serial/cyclades-serial-0.93/debian/: changelog  control  copyright  dirs  rules
serial/cyclades-serial-0.93/inc/: .cvsignore  control.h  cyclades-ser-cli.h  daemon.h  dev.h  misc.h.in  port_speed.h  sock.h  system.h  telnet.h  tsrio.h  tsrmeasure.h
serial/cyclades-serial-0.93/libcsc/: Makefile.in  depends  libcyclades-ser-cli.c
serial/cyclades-serial-0.93/man/: cyclades-devices.5  cyclades-ser-cli.8  cyclades-serial-client.8
serial/cyclades-serial-0.93/sun/: Makefile  pkginfo.in  prototype
up/: Makefile  README.rd  SPEC  config.json  index.html  remember.html
wat/: Makefile  README.rd  SPEC  config.json  index.html  packages.json  wat.spec
windows/: qvd.pa  qvdbug.bat  script.iss  script.pl
(+3737 files in other folders)
