dnl Process this file with autoconf to produce a configure script.
AC_INIT(cyclades-serial-client)
AC_CONFIG_HEADER(inc/conf.h)
AC_SUBST(version)
version="0.93"
AC_SUBST(date)
date=`date`

AC_SUBST(stripping)
AC_ARG_ENABLE(stripping,
      [  --disable-stripping  disables stripping of installed binaries],
      STRIPPING=$strippingval, STRIPPING=no)
if [[ ! "$STRIPPING" = "no" ]]; then
  stripping=""
else
  stripping="-s"
fi
echo $DEB_BUILD_OPTIONS | grep -q nostrip
if [[ "$?" = "0" ]]; then
  stripping=""
fi

AC_SUBST(debug)
AC_ARG_ENABLE(debug,
      [  --with-debug  enables debug code generation for binaries],
      debug=-g, debug="")
echo $DEB_BUILD_OPTIONS | grep -q debug
if [[ "$?" = "0" ]]; then
  debug=-g
fi

dnl Checks for programs.
AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

AC_SUBST(daemon)
AC_TRY_COMPILE(#include <unistd.h>
  , daemon(0, 0); , daemon="yes")
if [[ -n "$daemon" ]]; then
  daemon="#define HAVE_DAEMON"
fi

AC_SUBST(LIBC)
LIBC=l`ldd /bin/ls | grep libc | head -1 | cut -f2 -dl | cut -f1 "-d "`

AC_SUBST(OFLAGS)
AC_SUBST(CCFLAGS)
AC_SUBST(DEV_OBJ)
AC_SUBST(SOLFLAGS)
AC_SUBST(SOCFLAGS)

if [[ `uname` = "Linux" ]]; then
  OFLAGS="-DUSE_TERMIO -DUSE_TERMIOS -DUSE_POSIX_NONBLOCK"
  CCFLAGS="-O2 -Wall -W -Wshadow -Wpointer-arith -Wwrite-strings -pedantic"
  SOCFLAGS="-shared -fpic"
  SOLFLAGS="-shared -init libcsc_init -fini libcsc_fini -fpic -ldl"
  DEV_OBJ=linux-dev.o
else
  if [[ `uname` = "AIX" ]]; then
#AIX - never tested
    OFLAGS="-DUSE_TERMIO -DUSE_TERMIOS -DUSE_POSIX_NONBLOCK"
    CCFLAGS=-O2
    DEV_OBJ=aix-dev.o
  else
    if [[ `uname` = "SCO" ]]; then
      DEV_OBJ=sco-dev.o
      OFLAGS="-DUSE_POSIX_NONBLOCK"
      CCFLAGS=-O -b elf
      LIBS=-lsocket
    else
      if [[ `uname` = "Unixware" ]]; then
        DEV_OBJ=unixware-dev.o
        OFLAGS="-DUSE_TERMIO -DUSE_TERMIOS -DUSE_POSIX_NONBLOCK"
        LIBS="-lsocket -lnsl"
      else
        if [[ `uname` = "SunOS" ]]; then
          DEV_OBJ=solaris-dev.o
          OFLAGS="-DUSE_TERMIO -DUSE_TERMIOS -DUSE_POSIX_NONBLOCK"
          LIBS="-lsocket -lnsl"
          SOLFLAGS="$stripping -r -zinitarray=libcsc_init -zfiniarray=libcsc_fini -lc"
          if [[ "$CC" = "gcc" ]]; then
            CCFLAGS="-O2 -Wall -W -Wshadow -Wpointer-arith -Wwrite-strings -pedantic"
            SOCFLAGS="-shared -fpic"
          else
            CCFLAGS="-O"
            SOCFLAGS="-Kpic"
          fi
        else
#HPUX - never tested
          OFLAGS="-DHPUX -DUSE_POSIX_NONBLOCK"
          CCFLAGS="+DAportable -Ae"
          DEV_OBJ=hpux-dev.o
        fi
      fi
    fi
  fi
fi

AC_SUBST(UNIX98)
AC_SUBST(LIBS)
if [[ -e /dev/pts ]]; then
  if [[ `uname` != "SunOS" ]]; then
    UNIX98="#define UNIX98"
    LIBS="$LIBS -lutil"
  fi
fi

AC_OUTPUT(Makefile libcsc/Makefile inc/misc.h cyclades-serial-client.spec sun/pkginfo)
